app/assets/stylesheets/application.css.scss
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
 * or any plugin's vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any styles
 * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
 * file per style scope.
 *
 *= require_tree .
 *= require_self
 *= require mediaelement_rails
 *= require mediaelement_rails/mejs-skins
 */

@import "bootstrap-sprockets";
@import "bootstrap";

@mixin border-radius($radius) {
  -webkit-border-radius: $radius;
     -moz-border-radius: $radius;
      -ms-border-radius: $radius;
          border-radius: $radius;
}

/* colors */

$orange: #CC5200;
$gray: #D8D8DC;

body {
  padding-top: 70px;
}


/***** style jumbotron *****/

.jumbotron {
  text-align: center;
  background-color: $gray;  
  margin-top: -50px;
}


.jumbotron h1, .jumbotron .h1 {
  color: $orange;
  font-family: 'Advent Pro', sans-serif;
  font-weight: 200;
  font-size: 5em;
  margin-top: 20px;
}

.jumbotron img {
  width: 100%;
}

/***** center a column, mostly used for mejs header/player, not currrently in use. *****/

.col-centered {
  float: none;
  margin: 0 auto;
}

/***** style navbar *****/

.navbar-inverse {
  background-color: $gray;
  padding-top: 20px;
  padding-bottom: 20px;
}

.nav-pills > li > a {
  color: $orange;
  font-family: 'Advent Pro', sans-serif;
  font-weight: 600;
}


/***** add some seperation in posts. *****/

.postbreak {
  height: 100px;
}

.postsep {
  margin-top: 30px;
}


/***** adds a left margin to posts. *****/

.plmarg {
 margin-left: 20px;
}

/***** adds a top margin to static-pages *****/

.sptmarg {
  margin-top: 80px;
}

/***** remove bullets from alert messages *****/

.msgs {
  list-style: none;
}

.editlink {
  display: inline-block;
}

.editlink a {
  color: $orange;
  padding-left: 20px;
}

/* Small devices (tablets, 768px and up) */
@media (min-width: 768px) { 
  .jumbotron h1, .jumbotron .h1 {
    font-size: 7em; 
    letter-spacing: 7px;
  }
   .nav-pills > li > a {
   font-size: 1.5em; 
   letter-spacing: 3px;
  } 
}

/* Medium devices (desktops, 992px and up) */

@media (min-width: 992px) { 
  .jumbotron img {
    width: 80%;
  }
}

/* Large devices (large desktops, 1200px and up) */

@media (min-width: 1200px) {
  .jumbotron img {
    width: 70%;
  } 
}

/* gigantor devices (desktops 1440 and up) */
@media (min-width: 1440px) {
  .jumbotron img {
    width: 50%;
  } 
}

